# SNR

./: CMakeLists.txt  Makefile  README.md
analysis/: export.py  manage.py
include/: SNR.hpp  configuration.hpp
src/: SNR.cpp  SNRTest.cpp  SNRTuning.cpp  printCode.cpp
